# rust-dns

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.example.toml  install.sh
.github/workflows/: ci.yml  release.yml
deploy/: rust-dns.service
src/: blocklist.rs  cache.rs  config.rs  dns.rs  main.rs  qlog.rs  state.rs  stats.rs  upstream.rs  web.rs
src/web_assets/: index.html
tests/: e2e.rs  load.rs
