[package]
name = "rust-dns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arc-swap = "1"
axum = "0.8"
governor = "0.10"
hickory-proto = "0.26"
moka = { version = "0.12", features = ["future"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.6"
tokio = { version = "1", features = ["full"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
