[package]
name = "rust-dns"
version = "0.1.0"
edition = "2021"
description = "A small, fast blocking DNS resolver with a web admin portal"
license = "MIT"
readme = "README.md"
keywords = ["dns", "resolver", "adblock", "blocklist", "cache"]
categories = ["network-programming", "caching"]

[dependencies]
anyhow = "1"
arc-swap = "1"
axum = "0.8"
datafusion = "54.0.0"
governor = "0.10"
hickory-proto = "0.26"
moka = { version = "0.12", features = ["future"] }
redb = "4.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.6"
tokio = { version = "1", features = ["full"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
